config/hco-network-policy/hco_allow_egress_to_api_server.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: hco-allow-egress-to-api-server
spec:
  podSelector:
    matchExpressions:
    - key: np.kubevirt.io/allow-access-cluster-services
      operator: Exists
  policyTypes:
    - Egress
  egress:
  - ports:
    - protocol: TCP
      port: 6443
