config/hco-network-policy/k8s_hco-allow-egress-to-dns.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: hco-allow-egress-to-dns
spec:
  podSelector:
    matchExpressions:
    - key: np.kubevirt.io/allow-access-cluster-services
      operator: Exists
  policyTypes:
  - Egress
  egress:
  - ports:
    - protocol: TCP
      port: 53
    - protocol: UDP
      port: 53
    to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
      podSelector:
        matchLabels:
          k8s-app: kube-dns
