config/hco-network-policy/ocp_hco-allow-egress-to-dns.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: hco-allow-egress-to-dns
spec:
  podSelector:
    matchExpressions:
    - key: hco.kubevirt.io/allow-access-cluster-services
      operator: Exists
  policyTypes:
  - Egress
  egress:
  - ports:
    - protocol: TCP
      port: 5353
    - protocol: UDP
      port: 5353
    to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: openshift-dns
      podSelector:
        matchLabels:
          dns.operator.openshift.io/daemonset-dns: default
